
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int map; } ;


 TYPE_1__* MappingKernel ;
 TYPE_1__* lsym_map_file (char*) ;
 int printf (char*) ;

int MapKernel(void)
{

    MappingKernel = lsym_map_file("/mach_kernel");
    if (!MappingKernel || !MappingKernel->map)
    {
        MappingKernel = lsym_map_file("/System/Library/Kernels/kernel");
    }

    if (!MappingKernel || !MappingKernel->map)
    {
        printf("MapKernel: unable to map kernel, quiting \n");
        return -1;
    }


    printf("MapKernel: kernel mapped \n");
    return 1;
}
