; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_39675.c_MapKernel.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_39675.c_MapKernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"/mach_kernel\00", align 1
@MappingKernel = common dso_local global %struct.TYPE_3__* null, align 8
@.str.1 = private unnamed_addr constant [31 x i8] c"/System/Library/Kernels/kernel\00", align 1
@.str.2 = private unnamed_addr constant [43 x i8] c"MapKernel: unable to map kernel, quiting \0A\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"MapKernel: kernel mapped \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MapKernel() #0 {
  %1 = alloca i32, align 4
  %2 = call %struct.TYPE_3__* @lsym_map_file(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** @MappingKernel, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MappingKernel, align 8
  %4 = icmp ne %struct.TYPE_3__* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MappingKernel, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %5, %0
  %11 = call %struct.TYPE_3__* @lsym_map_file(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  store %struct.TYPE_3__* %11, %struct.TYPE_3__** @MappingKernel, align 8
  br label %12

12:                                               ; preds = %10, %5
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MappingKernel, align 8
  %14 = icmp ne %struct.TYPE_3__* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @MappingKernel, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %15, %12
  %21 = call i32 @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %24

22:                                               ; preds = %15
  %23 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local %struct.TYPE_3__* @lsym_map_file(i8*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
